fixing techstack component alignment in mobile moview and desktop v3

--- a/src/components/TechStack/styles.module.css
+++ b/src/components/TechStack/styles.module.css
@@ -11,7 +11,7 @@
 @media (width >= 47em) {
   .techStack {
     display: flex;
-    margin-top: 1rem;
+    margin-block: 1.2rem;
     gap: 1rem;
   }
 
